--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "d3d11"
+name = "dxgi"
 crate-type = ["cdylib"]
 
 [dependencies]
 retour = "0.1"
 anyhow = "1"
-winapi = { version = "0.3.9", features = ["d3d11"] }
+winapi = { version = "0.3.9", features = ["dxgi"] }
 log = "0.4"
 env_logger = "0.9.0"
 
