--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ anyhow = "1"
 winapi = { version = "0.3.9", features = ["dxgi"] }
 log = "0.4"
 env_logger = "0.9.0"
+thiserror = "1"
+zip = "0.6"
+tempfile = "3"
 
 [build-dependencies]
 cc = "1.0"
