--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "bnlc-mod-loader-dxgi"
+name = "bnlc-mod-loader"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "dxgi"
 crate-type = ["cdylib"]
 
 [dependencies]
