add giant annoying vanity banner

--- a/bnlc-mod-loader/Cargo.toml
+++ b/bnlc-mod-loader/Cargo.toml
@@ -17,6 +17,4 @@ zip = "0.6"
 tempfile = "3"
 normpath = "1"
 windows-libloader = { path = "../windows-libloader" }
-
-[build-dependencies]
-cc = "1.0"
+const_format = "0.2"
