--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -18,7 +18,7 @@ tempfile = "3"
 clean-path = "0.2"
 windows-libloader = { path = "../windows-libloader" }
 const_format = "0.2"
-mlua = { version = "0.8", features = ["lua54", "vendored"] }
+mlua = { version = "0.9.0-beta.1", features = ["lua54", "vendored"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.4"
 byteorder = "1"
