--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,5 +26,5 @@ jobs:
               with:
                   upload_url: ${{ github.event.release.upload_url }}
                   asset_path: dist.zip
-                  asset_name: bnlc-mod-loader-${{ github.ref_name }}.zip
+                  asset_name: chaudloader-${{ github.ref_name }}.zip
                   asset_content_type: application/octet-stream
