--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -23,3 +23,4 @@ serde = { version = "1", features = ["derive"] }
 toml = "0.4"
 byteorder = "1"
 indexmap = "1"
+semver = { version = "1", features = ["serde"] }
