--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,8 +17,6 @@ jobs:
                   submodules: recursive
             - uses: ilammy/msvc-dev-cmd@v1
             - uses: dtolnay/rust-toolchain@nightly
-              with:
-                  targets: x86_64-unknown-linux-gnu
             - run: ./download_and_build_lua.ps1
               shell: powershell
             - run: |
@@ -27,14 +25,10 @@ jobs:
                   $Env:LUA_LIB_NAME="lua54"
                   cargo build --release
               shell: powershell
-            - run: cargo build --release --target x86_64-unknown-linux-gnu --bin install
-            - run: Move-Item ./target/x86_64-unknown-linux-gnu/release/install install-linux
-              shell: powershell
             - run: Move-Item build/lua54/lua54.dll ./lua54.dll
               shell: powershell
             - run: |
-                  chmod a+x ./install-linux
-                  7z a -tzip dist.zip ./target/release/chaudloader.dll ./target/release/dxgi.dll ./target/release/install.exe ./lua54.dll ./README.md ./install-linux build
+                  7z a -tzip dist.zip ./target/release/chaudloader.dll ./target/release/dxgi.dll ./target/release/install.exe ./lua54.dll ./README.md build
               shell: bash
             - uses: actions/upload-release-asset@v1
               env:
