--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,9 @@ on:
 jobs:
     release:
         runs-on: windows-latest
+        defaults:
+            run:
+                shell: powershell
         steps:
             - uses: actions/checkout@v2
               with:
@@ -19,19 +22,18 @@ jobs:
             - uses: dtolnay/rust-toolchain@nightly
               with:
                   targets: x86_64-unknown-linux-musl
+            - uses: actions/setup-python@v4
+              with:
+                  python-version: "3.11"
             - run: ./download_and_build_lua.ps1
-              shell: powershell
             - run: |
                   $Env:LUA_INC="build/lua54/include"
                   $Env:LUA_LIB="build/lua54"
                   $Env:LUA_LIB_NAME="lua54"
                   cargo build --release
-              shell: powershell
             - run: cargo build --release --target x86_64-unknown-linux-musl --bin install
             - run: Move-Item build/lua54/lua54.dll ./lua54.dll
-              shell: powershell
-            - run: python3 make_dist_zip.py
-              shell: bash
+            - run: python make_dist_zip.py
             - uses: actions/upload-release-asset@v1
               env:
                   GITHUB_TOKEN: ${{ github.token }}
