--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -9,12 +9,11 @@ crate-type = ["cdylib"]
 [dependencies]
 retour = "0.1"
 anyhow = "1"
-winapi = { version = "0.3.9", features = ["dxgi"] }
+winapi = "0.3.9"
 log = "0.4"
 env_logger = "0.9.0"
 thiserror = "1"
 zip = "0.6"
-tempfile = "3"
 clean-path = "0.2"
 windows-libloader = { path = "../windows-libloader" }
 const_format = "0.2"
@@ -26,3 +25,4 @@ indexmap = "1"
 semver = { version = "1", features = ["serde"] }
 serde_plain = "1"
 crc32fast = "1"
+ntapi = "0.4"
