--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 retour = "0.1"
 anyhow = "1"
-winapi = { version = "0.3.9", features = ["dxgi"] }
+winapi = "0.3.9"
 log = "0.4"
 env_logger = "0.9.0"
 thiserror = "1"
@@ -26,3 +26,4 @@ indexmap = "1"
 semver = { version = "1", features = ["serde"] }
 serde_plain = "1"
 crc32fast = "1"
+ntapi = "0.4"
