--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chaudloader"
-version = "0.8.1"
+version = "0.8.2"
 edition = "2021"
 
 [lib]
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 retour = "0.1"
 anyhow = "1"
-winapi = { version = "0.3.9", features = ["dxgi"] }
+winapi = "0.3.9"
 log = "0.4"
 env_logger = "0.9.0"
 thiserror = "1"
