--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chaudloader"
-version = "0.8.3"
+version = "0.9.0"
 edition = "2021"
 
 [lib]
@@ -25,7 +25,11 @@ indexmap = "1"
 semver = { version = "1", features = ["serde"] }
 serde_plain = "1"
 crc32fast = "1"
-fltk = { version = "1", features = ["fltk-bundled"] }
+fltk = "1"
 fltk-theme = "0.4"
 oneshot = "0.1"
 get-last-error = "0.1"
+pulldown-cmark = "0.9"
+maud = "0.25"
+url = "2"
+opener = "0.6"
