--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -25,7 +25,10 @@ indexmap = "1"
 semver = { version = "1", features = ["serde"] }
 serde_plain = "1"
 crc32fast = "1"
-fltk = { version = "1", features = ["fltk-bundled"] }
+fltk = "1"
 fltk-theme = "0.4"
 oneshot = "0.1"
 get-last-error = "0.1"
+pulldown-cmark = "0.9"
+maud = "0.25"
+url = "2"
