--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,6 +39,14 @@ jobs:
                   GITHUB_TOKEN: ${{ github.token }}
               with:
                   upload_url: ${{ github.event.release.upload_url }}
+                  asset_path: target/release/chaudloader.dll
+                  asset_name: chaudloader.dll
+                  asset_content_type: application/octet-stream
+            - uses: actions/upload-release-asset@v1
+              env:
+                  GITHUB_TOKEN: ${{ github.token }}
+              with:
+                  upload_url: ${{ github.event.release.upload_url }}
                   asset_path: dist.zip
                   asset_name: chaudloader-${{ github.ref_name }}-windows.zip
                   asset_content_type: application/octet-stream
