--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,8 +19,9 @@ jobs:
               with:
                   submodules: recursive
             - uses: ilammy/msvc-dev-cmd@v1
-            - uses: dtolnay/rust-toolchain@nightly
+            - uses: dtolnay/rust-toolchain@master
               with:
+                  toolchain: nightly-2023-06-15
                   targets: x86_64-unknown-linux-musl
             - uses: actions/setup-python@v4
               with:
