--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-retour = "0.1"
+retour = { version = "0.3", features = ["static-detour"] }
 anyhow = "1"
 winapi = { version = "0.3.9", features = ["winuser", "namedpipeapi"] }
 log = "0.4"
