--- a/chaudloader/Cargo.toml
+++ b/chaudloader/Cargo.toml
@@ -16,7 +16,7 @@ thiserror = "1"
 zip = "0.6"
 clean-path = "0.2"
 windows-libloader = { path = "../windows-libloader" }
-mlua = { version = "0.9.0-beta.1", features = ["lua54", "serialize"] }
+mlua = { version = "0.9.9", features = ["lua54", "serialize"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.4"
 byteorder = "1"
