Installer: copy lua54.dll to output if exists, this way we can use cargo run -- --yes

--- a/chaudloader-installer/Cargo.toml
+++ b/chaudloader-installer/Cargo.toml
@@ -11,3 +11,6 @@ path = "src/main.rs"
 steamlocate = "2"
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
+
+[build-dependencies]
+omnicopy_to_output = "0.3.0"
